syntax = "proto3";
option go_package = "./error_msg";
package error_msg;
enum enum_error_code{
	SUCCESS   = 0; // 没有错误
	FAILD 	  = 1; // 通用错误
}