syntax = "proto3";
import "google/protobuf/empty.proto";
import public "error_msg.proto";
// 指定等会文件生成出来的package
option go_package = "./rpc_protocol";
package rpc_protocol;

//注册服务
message RegisterServiceRequest{
  uint32 server_type = 1;
  string rpc_port = 2;
}

message RegisterServiceResponse{
  error_msg.enum_error_code error_code = 1;		//0代表正常
  uint32 server_id = 2;
}
//请求服务列表
message ServiceItem{
	uint32 server_id = 1;
	uint32 server_type = 2;
	string ip = 3;
	string port = 4;
}
message QueryServiceListResponse{
  error_msg.enum_error_code error_code = 1;		//0代表正常
  repeated ServiceItem server_list = 2;//服务列表
}
//更新服务列表
message UpdateServiceListRequest{
  repeated ServiceItem server_list = 1;//服务列表
}
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//服务
service rpc_service{
  //服务注册
  rpc RegisterService(RegisterServiceRequest) returns(RegisterServiceResponse);
  //服务请求
  rpc QueryServiceList(google.protobuf.Empty) returns(QueryServiceListResponse);
  //服务更新
  rpc UpdateServiceList(UpdateServiceListRequest) returns(google.protobuf.Empty);
}

message TestRpcRequest{
  string id = 1;//服务列表
}

message TestRpcResponse{
  string msg = 1;//服务列表
}
//服务
service rpc_test_service{
  //服务注册
  rpc HelloCenter(TestRpcRequest) returns(TestRpcResponse);
}
